infra/k8s/manifest.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hushkey-api-deployment
  namespace: hushkey-ns
  labels:
    app: hushkey-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hushkey-api
  template:
    metadata:
      labels:
        app: hushkey-api
    spec:
      serviceAccountName: hushkeykv-sa
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "hushkey-kv"
      containers:
        - name: hushkey-api
          image: ghcr.io/shikhar03stark/hushkeyapi:__IMAGE_TAG__
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hushkey-api
  namespace: hushkey-ns
spec:
  type: LoadBalancer
  loadBalancerIP: 20.33.90.38
  selector:
    app: hushkey-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
