infra/k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hushkey-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hushkey-api
  namespace: hushkey-ns
  labels:
    app: hushkey-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hushkey-api
  template:
    metadata:
      labels:
        app: hushkey-api
    spec:
      containers:
        - name: hushkey-api
          image: ghcr.io/shilhar03stark/hushkeyapi:1.0.2
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hushkey-api
  namespace: hushkey-ns
spec:
  type: ClusterIP
  selector:
    app: hushkey-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hushkey-api
  namespace: hushkey-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: "hushkey-public-ip"
spec:
  rules:
    - host: hushkey.devitvish.in
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hushkey-api
                port:
                  number: 80
